# spicydesichciago-agent

./: .dockerignore  .env.example  .firebaserc  .gitignore  README.md  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules
agent/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
agent/app/: bot.py  config.py  escalation.py  event_buffer.py  intents.py  main.py  outcome_tracker.py  server.py  summary.py  transcript_buffer.py
agent/app/prompts/: system.hi.md  system.md  system.te.md
agent/app/security/: twilio_signature.py
agent/app/tools/: api_client.py  definitions.py  handler_result.py  handlers.py
agent/tests/: test_outcome_tracker.py
agent/tests/helpers/: api_mock.py
agent/tests/integration/: test_escalation_routes.py  test_multilingual_routes.py  test_server_routes.py  test_twilio_inbound_signature.py  test_twilio_signature_enforcement.py
agent/tests/unit/: test_api_client.py  test_bot_module.py  test_caller_history_format.py  test_config.py  test_escalation.py  test_event_buffer.py  test_full_url.py  test_handler_result.py  test_handlers.py  test_handlers_errors.py  test_intents.py  test_load_system_prompt.py  test_prompt_placeholder_banners.py  test_summary.py  test_tool_definitions.py  test_transcript_buffer.py  test_twilio_signature.py
api/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
api/app/: admin.py  main.py
api/app/api/: app_factory.py  dependencies.py
api/app/domain/: call.py  caller.py  daily_stats.py  message.py  models.py  owner_override.py  pickup.py  transcript.py
api/app/infrastructure/: cache.py  config.py  event_log.py  firestore_call_store.py  firestore_caller_store.py  logger.py  (+10 more)
api/scripts/: backfill_jsonl_to_firestore.py  materialize_daily_stats.py  migrate_pickup_state_to_firestore.py
api/src/: config.ts  logger.ts
api/test/: config.test.ts
api/tests/: conftest.py
(+113 files in other folders)
