[project]
name = "spicy-desi-agent"
version = "0.1.0"
description = "Spicy Desi voice agent (Pipecat + Twilio + Groq + Cartesia + Deepgram)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.12",

  "pipecat-ai[silero,deepgram,cartesia,groq,twilio]>=0.0.50",

  "twilio>=9.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
